# thesis

./: .env.example  .gitignore  .gitmodules  perplexity.py  pyproject.toml  run_generation.sh
data_gathering/: .gitignore  main.py
data_gathering/find_solutions/: filter_solutions.py  find_solutions_files.py  inference.py  text_extractor.py  write_to_jsonl.py
data_gathering/github/: find_repos.py  find_solutions.py
data_gathering/leaderboard/: parser.py  scraper.py
data_gathering/utils/: list_paths.py
data_generation/: batch.py  config.py  generator.py  jobs.py  main.py  models.py  prompts.py  run_local.py  storage.py
detection/perplexity/: fast_detect_gpt.py  perplexity.py
detection/svm/: classifier.py
detection/svm/ablation/: ablation.py  (+3 more)
generation/: batch.py  code_validation.py  config.py  generator.py  jobs.py  main.py  storage.py
jobscripts/: run_generation.sh  run_interactive_generation.sh
models/: models.py
normalisation/: normalisation.py
results/: comp_samples_preprocessing_author.json  comp_samples_preprocessing_problem.json  comp_samples_preprocessing_strict.json  comp_samples_tfidf_author.json  comp_samples_tfidf_problem.json  comp_samples_tfidf_strict.json  normal_samples_preprocessing_author.json  normal_samples_preprocessing_problem.json  normal_samples_preprocessing_strict.json  normal_samples_tfidf_author.json  normal_samples_tfidf_problem.json  normal_samples_tfidf_strict.json
scripts/: run_data_gathering.sh  run_interactive_generation.sh  run_local_generation.sh  run_perplexity.sh
stats/: plots.py  stats.py
utils/: utils.py
