[project]
name = "habrok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "requests>=2.28.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu129"
